--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
-    "clsx": "^2.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
     "nanoid": "^5.0.6",
     "next": "15.5.2",
     "openai": "^4.28.0",
@@ -18,7 +21,7 @@
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.6.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "eslint-config-next": "15.5.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
