--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.542.0",
     "nanoid": "^5.0.6",
     "next": "15.5.2",
@@ -20,7 +21,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
+    "reading-time": "^1.5.0",
     "remark-gfm": "^4.0.1",
+    "snarkdown": "^2.0.0",
     "tailwind-merge": "^2.6.0",
     "zustand": "^4.5.0"
   },
