style: enhance UI design in HeroSectionWithPwnedForm for better user experience

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY=sk-************************************************
-HIBP_API_KEYsk-proj-FTUeheF9zpBPAMJWjT2YjcNoVQlmbxwwrMJ3QtXJ00tQme0F2ibNw2uCo_xrb3vVvJZTbY3X0vT3BlbkFJPQx1Nf4_qMpcBmv1DFFQwJ_B-s_nsOXuLXJobBl-a3lcK0CsKgDG0V61dFTkHYaci3fFickHIA
+OPENAI_API_KEY=sk-********
+HIBP_API_KEY=********
